--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <title>React App</title>
+    <title>조각보 - 클레이튼 기반 기부 플랫폼</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
